style.css
/*
Theme Name: minima
Theme URI: http://drwtod.com/minima
Description: A minimal, no-frills Wordpress Theme
Author: Andrew Todd
Author URI: http://drwtod.com
Version: 1.0
License: GNU General Public License
License URI: license.txt
Tags: minimal, white, fixed-layout, light, one-column

No-frills theme built for drwtod.com
*/

/*	Resets
	------	*/

html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, 
p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em, 
img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, hr, 
dl, dt, dd, ol, ul, li, fieldset, form, label, legend, 
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figure, figcaption, hgroup, 
menu, footer, header, nav, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-weight: normal;
}

article, aside, canvas, figure, figure img, figcaption, hgroup,
footer, header, nav, section, audio, video {
	display: block;
}

a img {border: 0;}

/*	Typography presets
	------------------	*/

h1 {
	font-size: 42px;
	line-height: 72px;
	letter-spacing: -1px;
}

h2 {
	font-size: 26px;
	line-height: 48px;
}

h3 {
	font-size: 22px;
	line-height: 36px;
}

h4 {
	font-size: 18px;
	font-weight: bolder;
	line-height: 30px;
}

body {
	font: 18px/28px 'Merriweather', Georgia, serif;
	/*font: 16px/24px Helvetica, Arial, sans-serif;*/
}

small {
	font-size: 13px;
	line-height: 18px;
}

/*		Default Layout: 760px. 
		Gutters: 24px.
		Outer margins: 48px.
*/

body {
	width: 760px;
	background: #efefef;
	margin: auto;
	color: rgb(60,60,60);
	-webkit-text-size-adjust: 100%; /* Stops Mobile Safari from auto-adjusting font-sizes */
}

#page {
	border-left: 1px solid #ccc;
}

#header {
	margin-top: 48px;
	margin-right: 48px;
	margin-bottom: 12px;
	margin-left: 48px;
}

h1.sitehead {
	font-size: 68px;
	padding-top: 96px;
	float: left;
}

h1.pagehead {
	font-size: 24px;
	padding-top: 2px;
	color: #b00;
	float: left;
}

h1.pagehead a {
	color: #b00;
}

#navmain .menu {
	float:right;
	margin: 0px;
	padding-right: 0px;
}

#navmain {
	margin-top: 0px;
	float: right;
	padding-top: 20px;
}

#navmain ul {
	list-style-type: none;
}

#navmain li {
	float: left;
}

#navmain a {
	text-decoration: none;
	border: 0px;
	color: #888;
	padding: 96px 12px 6px 12px;
	margin-left: 6px;
	margin-right: 6px;
}

#navmain a:hover, navmain a:active {
	/* background: #555; */
	background: #b00;
	color: #f0f0f0;
	-webkit-transition: all .5s ease-in-out;
  	-moz-transition: all .5s ease-in-out;
  	-ms-transition: all .5s ease-in-out;
  	-o-transition: all .5s ease-in-out;
  	transition: all .5s; ease-in-out
	-moz-border-radius-bottomleft: 3px;
	-webkit-border-bottom-left-radius: 3px;
	border-bottom-left-radius: 3px;
	-moz-border-radius-bottomright: 3px;
	-webkit-border-bottom-right-radius: 3px;
	border-bottom-right-radius: 3px;
}

#navmain a:visited {

}

.nav-prev, .nav-next {
	padding-top: 24px;
	font-size: 16px;
}

.nav-prev {
	float: right;
	text-align: right;
	width: 45%;
}

.nav-next {
	float: left;
	width: 45%;
}

#content  {
	margin-top: 12px;
	margin-right: 48px;
	margin-bottom: 24px;
	margin-left: 48px;
	/* padding: 24px; */
	clear: left;
}

#content ul {
	margin-top: 0px;
	margin-bottom: 0px;
}

#content ul li {
	padding-top: 13px;
	padding-bottom: 9px;
}

.navlocal {
	width: 30%;
	float: right;
	margin: 12px 24px 24px 24px;
	padding: 12px;
	background: #e0e0e0;
	border: 1px solid #ccc;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
}

div.navlocal h4 {
	margin-top: 0px;
	padding-top: 6px;
}

#footer {
	margin: 96px 48px 96px 48px;
	clear: left;
}

#footer .copyright {
	color: #bbb;
	font-size: 12px;
	font-weight: 300;
	border-top: 1px dotted #ddd;
}

h1, h2, h3, h4, h5, h6 {
	padding: 24px 24px 6px 24px;
}

/*	=LINKS
	------------------------------------------------------ */
a {
	text-decoration: none;
	border-bottom: dotted 1px #b00;
	color: #b00;
}

a:hover {
	color: #d00;
	border-bottom: dotted 1px #d00;
}

a:visited {
	color: #888;	
	border-bottom: dotted 1px #888;
}

a:active {
	color: #600;
}

/*	=STANDARD ELEMENTS
	------------------------------------------------------ */

/* Standard element padding */

p, pre, ul, ol, .nav-page {
	padding: 6px 24px 6px 24px;
}

p.time-stamp {
	color: #bbb;
	font-size: small;
	font-style: italic;
	margin-top: 25px;
}

ul {
	margin-top: 6px;
	margin-right: 24px;
	margin-bottom: 12px;
	margin-left: 48px;
}

pre {
/*	border-left: 4px solid #d3d3d3; */
}

blockquote {
	font-size: 22px;
	line-height: 32px;
	color: #999;
	border-left: 4px solid #d3d3d3;
	/*padding: 24px;*/
	margin: 12px;
}

q {
	font-size: 22px;
	line-height: 32px;
	color: #999;
	margin: 12px;
}

/*	=IMAGES
		Full-column width: 616px / 568px with 24px padding
		Inset width: 236px
	------------------------------------------------------ */

img {

}

.img-center, .img-center img {
	width: 616px;
}

.img-center {
	padding: 12px 0px 12px 0px;
	color: #999;
	font-style: italic;
	font-size: small;		
}

.size-medium, .size-medium img  {
	width: 236px;
	height: auto;
	padding: 12px;
	border: 1px solid #bbb;
}

.size-full, .size-full img  {
	width: 616px;
	height: auto;
	padding: 0px 0px 24px 24px;
}

.alignright {
	float: right;
	margin: 0px 0px 18px 18px;
	color: #999;
	font: 16px/20px Georgia, serif italic;	
}

/*	Accessibility */

.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

.screen-reader-text:hover,
.screen-reader-text:active,
.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-size: 1.4rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar */
}

